# eatSaturn

./: .env.example  .gitignore  CLAUDE.md  biome.json  package-lock.json  package.json
.claude/: mcp.json  settings.json  settings.local.json  statusline.sh
.claude/agents/: cost-auditor.md  migration-reviewer.md  prompt-engineer.md  qa-agent.md  scraper-engineer.md
.claude/commands/: add-store.md  check-costs.md  deploy.md  fix-issue.md  generate-component.md  new-migration.md  review.md  scrape.md  test-meal-plan.md
.claude/rules/: accessibility.md  ai-prompts.md  api-conventions.md  code-style.md  database.md  scraper-standards.md  security.md  testing.md
apps/scraper/: CLAUDE.md  Dockerfile  pyproject.toml
apps/scraper/src/: alerting.py  base_scraper.py  db_writer.py  models.py  normalizer.py  recipe_importer.py  runner.py  scheduler.py  server.py
apps/scraper/src/scrapers/: aldi.py  kroger.py  safeway.py
apps/scraper/tests/: test_normalizer.py  test_scrapers.py
apps/web/: CLAUDE.md  package.json  vercel.json
apps/web/src/: middleware.ts
docs/: API.md  ARCHITECTURE.md  GROCERY_DATA_SPEC.md  MEAL_PLAN_ALGORITHM.md  ONBOARDING.md  PRD.md  RUNBOOK.md  TESTING_STRATEGY.md
scripts/: check-spend.sh  seed-test-data.sh  setup.sh
skills/add-grocery-chain/: SKILL.md
skills/component-scaffold/: SKILL.md
skills/cost-optimization/: SKILL.md
skills/database-migration/: SKILL.md
skills/meal-plan-optimization/: SKILL.md
skills/security-review/: SKILL.md
supabase/migrations/: 001_initial_schema.sql  002_functions.sql  003_rls.sql  004_seed.sql
(+45 files in other folders)
